Mobile view updated

--- a/company/about.html
+++ b/company/about.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Our <span>Mission</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">To help enterprises unlock the full potential of ServiceNow by delivering AI-powered transformations faster, smarter, and better. We believe the agentic enterprise is the future of work.</p>
+          <p class="f24">To help enterprises unlock the full potential of ServiceNow by delivering AI-powered transformations faster, smarter, and better. We believe the agentic enterprise is the future of work.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Who We Are:</h5>
+          <h5 class="keytitle">Who We Are:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> <strong>200+</strong> certified ServiceNow professionals
             </li>
