--- a/company/careers.html
+++ b/company/careers.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Build Your Career <span>With Us</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Work on the most innovative ServiceNow transformations with a team of 200+ certified professionals. Learn, grow, and make an impact.</p>
+          <p class="f24">Work on the most innovative ServiceNow transformations with a team of 200+ certified professionals. Learn, grow, and make an impact.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Why Join XoraiNow:</h5>
+          <h5 class="keytitle">Why Join XoraiNow:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Work on cutting-edge AI-powered transformations
             </li>
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="grow mt50">
           <h4>Apply <span>Now</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Ready to join our team? Send us your resume and let's discuss how you can contribute to building the agentic enterprise.</p>
+          <p class="f24">Ready to join our team? Send us your resume and let's discuss how you can contribute to building the agentic enterprise.</p>
           <div style="margin-top: 50px;">
             <a href="../contact.html" class="btn btn-green">Apply Now <i class="ri-arrow-right-line"></i></a>
           </div>
