--- a/company/events.html
+++ b/company/events.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Join Us at <span>Events</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Connect with our ServiceNow experts at industry events, webinars, and conferences. Learn from real-world transformations and network with peers.</p>
+          <p class="f24">Connect with our ServiceNow experts at industry events, webinars, and conferences. Learn from real-world transformations and network with peers.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Upcoming Events:</h5>
+          <h5 class="keytitle">Upcoming Events:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> ServiceNow Knowledge conferences and user groups
             </li>
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="grow mt50">
           <h4>Stay <span>Updated</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Contact us to stay informed about upcoming events, webinars, and conferences where we'll be presenting.</p>
+          <p class="f24">Contact us to stay informed about upcoming events, webinars, and conferences where we'll be presenting.</p>
           <div style="margin-top: 50px;">
             <a href="../contact.html" class="btn btn-green">Stay Informed <i class="ri-arrow-right-line"></i></a>
           </div>
