--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <h3 style="font-size: 40px; margin-bottom: 30px;">Get in Touch</h3>
+              <h3 class="cnttitle">Get in Touch</h3>
               <form style="text-align: left;">
 
                 <div class="row">
@@ -46,14 +46,14 @@
                     <div class="mb-3">
                       <label for="firstName" class="form-label">First Name *</label>
                       <input type="text" class="form-control" id="firstName" required
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="mb-3">
                       <label for="lastName" class="form-label">Last Name *</label>
                       <input type="text" class="form-control" id="lastName" required
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                 </div>
@@ -64,14 +64,14 @@
                     <div class="mb-3">
                       <label for="email" class="form-label">Email *</label>
                       <input type="email" class="form-control" id="email" required
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="mb-3">
                       <label for="phone" class="form-label">Phone</label>
                       <input type="tel" class="form-control" id="phone"
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                 </div>
@@ -81,14 +81,14 @@
                     <div class="mb-3">
                       <label for="company" class="form-label">Company *</label>
                       <input type="text" class="form-control" id="company" required
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="mb-3">
                       <label for="role" class="form-label">Role</label>
                       <input type="text" class="form-control" id="role"
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                 </div>
@@ -98,14 +98,14 @@
                     <div class="mb-3">
                       <label for="country" class="form-label">Country</label>
                       <input type="text" class="form-control" id="country"
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="mb-3">
                       <label for="help" class="form-label">How can we help? *</label>
                       <select class="form-control" id="help" required
-                        style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;">
+                        >
                         <option value="">Select an option</option>
                         <option value="implementation">Implementation</option>
                         <option value="consulting">Consulting</option>
@@ -125,26 +125,26 @@
                 <div class="mb-3">
                   <label for="needs" class="form-label">Tell us about your needs</label>
                   <textarea class="form-control" id="needs" rows="5"
-                    style="background: #111; border: 1px solid #333; color: #fff; padding: 15px;"></textarea>
+                    ></textarea>
                 </div>
                 <button type="submit" class="btn btn-green">Send Message <i class="ri-arrow-right-line"></i></button>
               </form>
             </div>
             <div class="col-md-6">
               <div class="cntactaddress">
-                <h3 style="font-size: 40px; margin-bottom: 30px;">Reach Us Directly</h3>
-                <p style="font-size: 24px; margin-bottom: 20px;"><strong>Email:</strong><br>
+                <h3 style="class="cnttitle"">Reach Us Directly</h3>
+                <p ><strong>Email:</strong><br>
                   <a href="mailto:hello@xorainow.com" style="color: #62d84e;">hello@xorainow.com</a>
                 </p>
 
-                <p style="font-size: 24px; margin-bottom: 20px;"><strong>Headquarters:</strong><br>
+                <p ><strong>Headquarters:</strong><br>
                   Noida, India</p>
 
-                <p style="font-size: 24px; margin-bottom: 20px;"><strong>Delivery Centers:</strong><br>
+                <p ><strong>Delivery Centers:</strong><br>
                   Hyderabad, India<br>
                   Guwahati, India</p>
 
-                <p style="font-size: 24px; margin-bottom: 20px;"><strong>Global Locations:</strong><br>
+                <p ><strong>Global Locations:</strong><br>
                   Dubai, Riyadh ,UAE<br>
                   New York, San Diego, United States</p>
 
