--- a/industries/healthcare.html
+++ b/industries/healthcare.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="grow mt50">
           <h4>The Healthcare <span>Imperative</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Healthcare organizations face unprecedented pressure—staffing challenges, <br> regulatory complexity, patient expectations, and the mandate to do more with less.</p>
+          <p class="f24">Healthcare organizations face unprecedented pressure—staffing challenges, <br> regulatory complexity, patient expectations, and the mandate to do more with less.</p>
           
           <h5>Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
