--- a/industries/index.html
+++ b/industries/index.html
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="grow">
           <h4>Don't See Your <span>Industry?</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Our platform expertise translates across sectors. Let's discuss how ServiceNow can transform your specific business challenges.</p>
+          <p class="f24">Our platform expertise translates across sectors. Let's discuss how ServiceNow can transform your specific business challenges.</p>
           <a href="../contact.html" class="btn btn-green">Contact Us <i class="ri-arrow-right-line"></i></a>
         </div>
       </div>
