--- a/industries/retail.html
+++ b/industries/retail.html
@@ -36,7 +36,7 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Retail <span>Reality</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Retailers compete on experience—customer experience, employee experience, and operational excellence. Legacy systems and manual processes are competitive liabilities.</p>
+          <p class="f24">Retailers compete on experience—customer experience, employee experience, and operational excellence. Legacy systems and manual processes are competitive liabilities.</p>
           
           <h5>Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
