--- a/resources/blogs.html
+++ b/resources/blogs.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Stay Informed <span>With Our Blog</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Learn from our certified ServiceNow experts as they share insights, best practices, and real-world experiences from enterprise transformations.</p>
+          <p class="f24">Learn from our certified ServiceNow experts as they share insights, best practices, and real-world experiences from enterprise transformations.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Topics We Cover:</h5>
+          <h5 class="keytitle">Topics We Cover:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> ServiceNow platform updates and new features
             </li>
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="grow mt50">
           <h4>Stay <span>Updated</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Check back regularly for new articles, insights, and updates from our ServiceNow experts.</p>
+          <p class="f24">Check back regularly for new articles, insights, and updates from our ServiceNow experts.</p>
           <div style="margin-top: 50px;">
             <a href="../contact.html" class="btn btn-green">Contact Us <i class="ri-arrow-right-line"></i></a>
           </div>
