--- a/resources/documents.html
+++ b/resources/documents.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Access Valuable <span>Resources</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Download comprehensive guides, whitepapers, case studies, and best practice documents from our ServiceNow experts.</p>
+          <p class="f24">Download comprehensive guides, whitepapers, case studies, and best practice documents from our ServiceNow experts.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Available Resources:</h5>
+          <h5 class="keytitle">Available Resources:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> ServiceNow implementation guides and checklists
             </li>
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="grow mt50">
           <h4>Download <span>Resources</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Contact us to access our comprehensive library of ServiceNow resources, guides, and documents.</p>
+          <p class="f24">Contact us to access our comprehensive library of ServiceNow resources, guides, and documents.</p>
           <div style="margin-top: 50px;">
             <a href="../contact.html" class="btn btn-green">Request Resources <i class="ri-arrow-right-line"></i></a>
           </div>
