--- a/services/consulting.html
+++ b/services/consulting.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Strategic <span>ServiceNow Consulting</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Whether you're starting your ServiceNow journey or optimizing an existing deployment, our consulting services help you make the right decisions and maximize ROI.</p>
+          <p class="f24">Whether you're starting your ServiceNow journey or optimizing an existing deployment, our consulting services help you make the right decisions and maximize ROI.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Our Consulting Services:</h5>
+          <h5 class="keytitle">Our Consulting Services:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Platform assessment and optimization
             </li>
