--- a/services/implementation.html
+++ b/services/implementation.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Why Our <span>Implementation Stands Out</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">We don't just implement ServiceNow—we transform how you work. Our AI-first approach embeds intelligence from day one, delivering value faster and smarter.</p>
+          <p class="f24">We don't just implement ServiceNow—we transform how you work. Our AI-first approach embeds intelligence from day one, delivering value faster and smarter.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Our Approach:</h5>
+          <h5 class="keytitle">Our Approach:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> AI-first methodology from discovery to deployment
             </li>
