--- a/services/staffing.html
+++ b/services/staffing.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Flexible ServiceNow <span>Talent Solutions</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Need ServiceNow expertise for a project, gap coverage, or ongoing support? We provide certified professionals ready to hit the ground running.</p>
+          <p class="f24">Need ServiceNow expertise for a project, gap coverage, or ongoing support? We provide certified professionals ready to hit the ground running.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Our Staffing Services:</h5>
+          <h5 class="keytitle">Our Staffing Services:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Certified ServiceNow developers and administrators
             </li>
