--- a/services/training.html
+++ b/services/training.html
@@ -32,9 +32,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>Empower Your <span>Team</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Transform your team from ServiceNow users to ServiceNow experts. Our comprehensive training programs build internal capability and reduce dependency on external consultants.</p>
+          <p class="f24">Transform your team from ServiceNow users to ServiceNow experts. Our comprehensive training programs build internal capability and reduce dependency on external consultants.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Our Training Programs:</h5>
+          <h5 class="keytitle">Our Training Programs:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> ServiceNow Administration fundamentals and advanced
             </li>
