--- a/solutions/crm.html
+++ b/solutions/crm.html
@@ -35,9 +35,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Customer Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Today's customers expect instant resolution. Service channels are fragmented. Field service is inefficient. Every interaction matters, but most systems create friction instead of delight.</p>
+          <p class="f24">Today's customers expect instant resolution. Service channels are fragmented. Field service is inefficient. Every interaction matters, but most systems create friction instead of delight.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Fragmented customer service channels
             </li>
