--- a/solutions/finance.html
+++ b/solutions/finance.html
@@ -35,9 +35,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Finance Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Finance teams struggle with visibility into project portfolios. Budget allocation is reactive. Financial operations are fragmented. Strategic decisions lack data-driven insights.</p>
+          <p class="f24">Finance teams struggle with visibility into project portfolios. Budget allocation is reactive. Financial operations are fragmented. Strategic decisions lack data-driven insights.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Lack of portfolio visibility and optimization
             </li>
