--- a/solutions/hr.html
+++ b/solutions/hr.html
@@ -35,9 +35,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>HR Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Today's employees expect consumer-grade HR experiences. Onboarding is slow. Benefits are confusing. HR teams are buried in administrative tasks. Employee satisfaction suffers.</p>
+          <p class="f24">Today's employees expect consumer-grade HR experiences. Onboarding is slow. Benefits are confusing. HR teams are buried in administrative tasks. Employee satisfaction suffers.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Manual, paper-based onboarding processes
             </li>
