--- a/solutions/index.html
+++ b/solutions/index.html
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="grow mt50">
           <h4>AI-Powered <span>Everything</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Every solution we implement includes AI capabilities—from Now Assist generative AI to Virtual Agents to Predictive Intelligence. Because automation without intelligence isn't transformation.</p>
+          <p class="f24">Every solution we implement includes AI capabilities—from Now Assist generative AI to Virtual Agents to Predictive Intelligence. Because automation without intelligence isn't transformation.</p>
         </div>
       </div>
     </div>
