--- a/solutions/it.html
+++ b/solutions/it.html
@@ -35,9 +35,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>IT Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Today's IT teams are stretched thin. Legacy tools create silos. Manual processes slow everything down. Users expect consumer-grade experiences. Innovation gets buried under maintenance.</p>
+          <p class="f24">Today's IT teams are stretched thin. Legacy tools create silos. Manual processes slow everything down. Users expect consumer-grade experiences. Innovation gets buried under maintenance.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Fragmented IT service delivery channels
             </li>
