--- a/solutions/security-risk.html
+++ b/solutions/security-risk.html
@@ -35,9 +35,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Security Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Today's threats evolve faster than ever. Compliance requirements multiply. Security teams are overwhelmed. Legacy security tools create silos. Protection can't come at the cost of innovation.</p>
+          <p class="f24">Today's threats evolve faster than ever. Compliance requirements multiply. Security teams are overwhelmed. Legacy security tools create silos. Protection can't come at the cost of innovation.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Fragmented security operations and tools
             </li>
