--- a/solutions/supply-chain.html
+++ b/solutions/supply-chain.html
@@ -35,9 +35,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Supply Chain Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Supply chains face constant disruption. Procurement is slow and manual. Visibility is limited. Vendor management is fragmented. Resilience requires intelligent automation and real-time insights.</p>
+          <p class="f24">Supply chains face constant disruption. Procurement is slow and manual. Visibility is limited. Vendor management is fragmented. Resilience requires intelligent automation and real-time insights.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Fragmented supply chain and procurement systems
             </li>
