--- a/industries/education.html
+++ b/industries/education.html
@@ -36,7 +36,7 @@
       <div class="container">
         <div class="grow">
           <h4>The Modern <span>Campus Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Today's students expect consumer-grade digital experiences. Faculty need seamless support. IT teams are stretched thin. Legacy systems create friction at every turn.</p>
+          <p class="f24">Today's students expect consumer-grade digital experiences. Faculty need seamless support. IT teams are stretched thin. Legacy systems create friction at every turn.</p>
           
           <h5>Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
