--- a/industries/financial-services.html
+++ b/industries/financial-services.html
@@ -36,9 +36,9 @@
       <div class="container">
         <div class="grow" style="text-align: left;">
           <h4>The Modern <span>Campus Challenge</span></h4>
-          <p style="font-size: 24px; margin-bottom: 30px;">Today's students expect consumer-grade digital experiences. Faculty need seamless support. IT teams are stretched thin. Legacy systems create friction at every turn.</p>
+          <p class="f24">Today's students expect consumer-grade digital experiences. Faculty need seamless support. IT teams are stretched thin. Legacy systems create friction at every turn.</p>
           
-          <h5 style="margin-top: 50px; margin-bottom: 30px;">Key Challenges:</h5>
+          <h5 class="keytitle">Key Challenges:</h5>
           <ul class="list-unstyled text-start d-inline-block">
             <li> <img src="../images/tick.png" alt=""> Fragmented student service channels
             </li>
