New chat code updated

--- a/industries/retail.html
+++ b/industries/retail.html
@@ -124,7 +124,9 @@
 
 </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://js.chatlio.com/widget.js" async></script>
+<chatlio-widget widgetid="8734e60c-1401-4791-5859-d44a36bff398"></chatlio-widget>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
 
